Infrastructure/k8s/learn/mongo-express.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:latest
          resources:
            requests: # Minimum amount of resources requested
              cpu: '0.5'
              memory: '500Mi'
            limits: # Maximum amount of resources requested
              cpu: "0.5"
              memory: '1Gi'
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: mondo-express-service
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website
spec:
  ingressClassName: nginx
  rules:
    - host: express.0fbd95ad459c42ceb5cb.northeurope.aksapp.io
      http:
        paths:
          - backend: # How the ingress will handle the requests
              service:
               name: mondo-express-service # Which service the request will be forwarded to
               port:
                 number: 80 # Which port in that service
            path: / # Which path is this rule referring to
            pathType: Prefix
